--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.2.7",
   "author": "Plainly Videos",
   "scripts": {
-    "build": "cd plainly-aescripts && yarn install && yarn build && cd ../plainly-plugin && yarn install && yarn build",
-    "prepare-aescripts": "cd plainly-aescripts && yarn install && yarn build",
-    "prepare-plugin": "cd plainly-plugin && yarn install && yarn build",
+    "build": "cd plainly-aescripts && yarn install --immutable && yarn build && cd ../plainly-plugin && yarn install --immutable && yarn build",
+    "prepare-aescripts": "cd plainly-aescripts && yarn install --immutable && yarn build",
+    "prepare-plugin": "cd plainly-plugin && yarn install --immutable && yarn build",
     "package": "rimraf package && yarn build && node ./scripts/preparePackage.cjs",
     "prepare": "rimraf package && node ./scripts/preparePackage.cjs",
     "postinstall": "husky",
