--- a/biome.json
+++ b/biome.json
@@ -43,8 +43,7 @@
   },
   "javascript": {
     "formatter": {
-      "quoteStyle": "single",
-      "semicolons": "always"
+      "quoteStyle": "single"
     }
   },
   "assist": {
