--- a/plainly-plugin/package.json
+++ b/plainly-plugin/package.json
@@ -10,6 +10,7 @@
     "build-test": "yarn clean && cross-env NODE_ENV=production node ./../scripts/updateManifest.cjs && cross-env NODE_ENV=test webpack --mode production",
     "build": "yarn clean && cross-env NODE_ENV=production node ./../scripts/updateManifest.cjs && cross-env NODE_ENV=production webpack --mode production",
     "biome": "biome check ./src",
+    "biome-ci": "biome ci ./src",
     "biome-write": "biome check --write ./src"
   },
   "dependencies": {
