--- a/plainly-aescripts/package.json
+++ b/plainly-aescripts/package.json
@@ -11,13 +11,14 @@
     "build-test": "yarn compile && webpack --mode production",
     "build": "yarn compile && webpack --mode production",
     "biome": "biome check ./src",
+    "biome-ci": "biome ci ./src",
     "biome-write": "biome check --write ./src"
   },
   "dependencies": {
     "types-for-adobe": "^7.2.2"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
+    "@biomejs/biome": "2.2.4",
     "@types/node": "^22.10.5",
     "concurrently": "^9.1.2",
     "rimraf": "^6.0.1",
