--- a/plainly-plugin/package.json
+++ b/plainly-plugin/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "form-data": "^4.0.4",
+    "lodash-es": "^4.17.22",
     "lucide-react": "^0.544.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -32,6 +33,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/archiver": "^6.0.3",
     "@types/dotenv-webpack": "^7.0.8",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.17.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
