--- a/plainly-aescripts/tsconfig.json
+++ b/plainly-aescripts/tsconfig.json
@@ -1,16 +1,14 @@
 {
   "compilerOptions": {
-    "module": "System",
     "rootDir": ".",
     "outDir": "dist",
-    "outFile": "dist/index.js",
     "lib": ["ES2018"],
+    "target": "es3",
     "skipLibCheck": true,
-    "ignoreDeprecations": "5.0",
     "experimentalDecorators": true,
     "allowJs": true,
-    "strict": true,
+    "strictNullChecks": true,
     "types": ["./node_modules/types-for-adobe/AfterEffects/22.0", "@types/node"]
   },
-  "include": ["src/**/*.ts", "index.d.ts"]
+  "include": ["src/**/*.ts", "src/shims.js", "index.d.ts"]
 }
