--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.3.8/schema.json",
   "vcs": {
     "enabled": false,
     "clientKind": "git",
@@ -11,7 +11,7 @@
       "**",
       "!**/plainly-plugin/src/node/lib",
       "!**/dist",
-      "!**/plainly-aescripts/src/shims.js"
+      "!**/package"
     ]
   },
   "formatter": {
