--- a/plainly-aescripts/biome.json
+++ b/plainly-aescripts/biome.json
@@ -1,10 +1,10 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.3.8/schema.json",
   "root": false,
   "extends": "//",
   "files": {
     "ignoreUnknown": false,
-    "includes": ["**", "!**/src/shims.js"]
+    "includes": ["**", "!**/src/shims.js", "!**/dist"]
   },
   "linter": {
     "rules": {
