--- a/plainly-aescripts/tsconfig.json
+++ b/plainly-aescripts/tsconfig.json
@@ -10,5 +10,5 @@
     "strictNullChecks": true,
     "types": ["./node_modules/types-for-adobe/AfterEffects/22.0", "@types/node"]
   },
-  "include": ["src/**/*.ts", "src/shims.js", "index.d.ts"]
+  "include": ["src/**/*.ts", "index.d.ts"]
 }
