--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,20 +7,28 @@ on:
     branches: [master]
 
 jobs:
-  biome-check-aescripts:
-    name: Run Biome check AeScripts
+  biome:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: plainly-aescripts
-
+    name: Run Biome check
     steps:
-      - uses: actions/checkout@v6
-      - uses: actions/setup-node@v6
+      - name: Checkout
+        uses: actions/checkout@v6
+
+      - name: Cache turbo build setup
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ github.sha }}
+          restore-keys: ${{ runner.os }}-turbo-
+
+      - name: Install Node.js
+        uses: actions/setup-node@v6
         with:
           node-version: '20.11.1'
           cache: 'yarn'
-          cache-dependency-path: 'plainly-aescripts/yarn.lock'
+
+      - name: Install dependencies
+        run: yarn install --immutable
 
       - name: Setup Biome
         uses: biomejs/setup-biome@v2
@@ -28,73 +36,31 @@ jobs:
           version: latest
 
       - name: Run Biome check
-        working-directory: plainly-aescripts
-        run: biome ci ./src
+        run: biome ci .
 
-  build-aescripts:
-    name: Run build AeScripts
+  build:
     runs-on: ubuntu-latest
-    needs: biome-check-aescripts
-    defaults:
-      run:
-        working-directory: plainly-aescripts
-
+    needs: biome
+    name: Run build
     steps:
-      - uses: actions/checkout@v6
-      - uses: actions/setup-node@v6
+      - name: Checkout
+        uses: actions/checkout@v6
+
+      - name: Cache turbo build setup
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ github.sha }}
+          restore-keys: ${{ runner.os }}-turbo-
+
+      - name: Install Node.js
+        uses: actions/setup-node@v6
         with:
           node-version: '20.11.1'
           cache: 'yarn'
-          cache-dependency-path: 'plainly-aescripts/yarn.lock'
+
+      - name: Install dependencies
+        run: yarn install --immutable
 
       - name: Run build
-        working-directory: plainly-aescripts
-        run: |
-          yarn install --immutable
-          yarn build
-
-  biome-check-plugin:
-    name: Run Biome check Plugin
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: plainly-plugin
-
-    steps:
-      - uses: actions/checkout@v6
-      - uses: actions/setup-node@v6
-        with:
-          node-version: '20.11.1'
-          cache: 'yarn'
-          cache-dependency-path: 'plainly-plugin/yarn.lock'
-
-      - name: Setup Biome
-        uses: biomejs/setup-biome@v2
-        with:
-          version: latest
-
-      - name: Run Biome check
-        working-directory: plainly-plugin
-        run: biome ci ./src
-
-  build-plugin:
-    name: Run build Plugin
-    runs-on: ubuntu-latest
-    needs: biome-check-plugin
-    defaults:
-      run:
-        working-directory: plainly-plugin
-
-    steps:
-      - uses: actions/checkout@v6
-      - uses: actions/setup-node@v6
-        with:
-          node-version: '20.11.1'
-          cache: 'yarn'
-          cache-dependency-path: 'plainly-plugin/yarn.lock'
-
-      - name: Run build
-        working-directory: plainly-plugin
-        run: |
-          yarn install --immutable
-          yarn build
+        run: yarn build
