--- a/plainly-aescripts/package.json
+++ b/plainly-aescripts/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "@plainly/aescripts",
+  "name": "plainly-aescripts",
   "version": "1.2.9",
   "description": "Adobe After Effects scripts for plugin",
   "author": "Plainly Videos",
   "license": "Apache-2.0",
   "scripts": {
-    "clean": "rimraf dist",
-    "compile": "yarn clean && tsc",
-    "dev": "yarn compile && concurrently \"tsc --watch\" \"webpack --mode development --watch\"",
-    "build-test": "yarn compile && webpack --mode production",
-    "build": "yarn compile && webpack --mode production",
-    "biome": "biome check ./src",
-    "biome-write": "biome check --write ./src"
+    "clean": "rimraf dist && tsc",
+    "build": "yarn clean && webpack --mode production",
+    "build-test": "yarn clean && webpack --mode production",
+    "dev": "yarn clean && concurrently \"tsc --watch\" \"webpack --mode development --watch\""
   },
   "dependencies": {
     "types-for-adobe": "^7.2.2"
