--- a/plainly-aescripts/tsconfig.json
+++ b/plainly-aescripts/tsconfig.json
@@ -8,7 +8,7 @@
     "experimentalDecorators": true,
     "allowJs": true,
     "strictNullChecks": true,
-    "types": ["./node_modules/types-for-adobe/AfterEffects/22.0", "@types/node"]
+    "types": ["types-for-adobe/AfterEffects/22.0", "@types/node"]
   },
   "include": ["src/**/*.ts", "index.d.ts"]
 }
