--- a/.github/workflows/sign-extension.yml
+++ b/.github/workflows/sign-extension.yml
@@ -10,43 +10,47 @@ jobs:
     name: Build and Run ZXPSignCMD Tool
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout
+        uses: actions/checkout@v6
+
+      - name: Cache turbo build setup
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ github.sha }}
+          restore-keys: ${{ runner.os }}-turbo-
+
+      - name: Install Node.js
+        uses: actions/setup-node@v6
         with:
           node-version: '20.11.1'
+          cache: 'yarn'
 
-      - name: Install root dependencies
-        run: |
-          yarn install --immutable
+      - name: Install dependencies
+        run: yarn install --immutable
 
-      - name: Build the project
-        run: |
-          yarn build
+      - name: Run build
+        run: yarn build
 
       - name: Prepare package for signing
-        run: |
-          yarn prepare
-    
+        run: yarn prepare
+
       - name: Download ZXPSignCmd Tool
-        run: |
-          curl -L -o ZXPSignCmd.dmg https://github.com/Adobe-CEP/CEP-Resources/raw/master/ZXPSignCMD/4.1.2/macOS/ZXPSignCmd-64bit.dmg
+        run: curl -L -o ZXPSignCmd.dmg https://github.com/Adobe-CEP/CEP-Resources/raw/master/ZXPSignCMD/4.1.2/macOS/ZXPSignCmd-64bit.dmg
 
       - name: Mount ZXPSignCmd Tool
-        run: |
-          hdiutil attach ZXPSignCmd.dmg
+        run: hdiutil attach ZXPSignCmd.dmg
 
       - name: Copy ZXPSignCmd Tool to /usr/local/bin
         run: |
           sudo cp /Volumes/ZXPSignCmd-64bit/ZXPSignCmd-64bit /usr/local/bin/
           sudo chmod +x /usr/local/bin/ZXPSignCmd-64bit
-        
+
       - name: Import certificate
-        run: |
-          echo "${{ secrets.PLUGIN_CERTIFICATE_P12 }}" | base64 --decode > certificate.p12
+        run: echo "${{ secrets.PLUGIN_CERTIFICATE_P12 }}" | base64 --decode > certificate.p12
 
       - name: Verify certificate
-        run: |
-          openssl pkcs12 -info -in certificate.p12 -noout -passin pass:${{ secrets.PLUGIN_CERTIFICATE_P12_PASSWORD }}
+        run: openssl pkcs12 -info -in certificate.p12 -noout -passin pass:${{ secrets.PLUGIN_CERTIFICATE_P12_PASSWORD }}
 
       - name: Perform signing
         run: |
