Create plainly-types package

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:clean": "yarn build:aescripts && yarn build:plugin",
     "build:aescripts": "cd plainly-aescripts && yarn install --immutable && yarn build && cd ..",
     "build:plugin": "cd plainly-plugin && yarn install --immutable && yarn build && cd ..",
+    "build:types": "cd plainly-types && yarn install --immutable && yarn build && cd ..",
     "package": "rimraf package && yarn build:clean && node ./scripts/preparePackage.cjs",
     "prepare": "rimraf package && node ./scripts/preparePackage.cjs",
     "postinstall": "husky",
@@ -25,6 +26,7 @@
   "packageManager": "yarn@3.8.7",
   "workspaces": [
     "plainly-aescripts",
-    "plainly-plugin"
+    "plainly-plugin",
+    "plainly-types"
   ]
 }
