--- a/plainly-aescripts/package.json
+++ b/plainly-aescripts/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/node": "^22.10.5",
     "concurrently": "^9.1.2",
+    "plainly-types": "file:../plainly-types",
     "rimraf": "^6.1.2",
     "typescript": "^4",
     "webpack": "^5.97.1",
