--- a/plainly-types/package.json
+++ b/plainly-types/package.json
@@ -5,12 +5,7 @@
   "author": "Plainly Videos",
   "license": "Apache-2.0",
   "private": true,
-  "types": "./src/index.ts",
-  "exports": {
-    ".": {
-      "types": "./src/index.ts"
-    }
-  },
+  "types": "dist/",
   "scripts": {
     "clean": "rimraf dist",
     "build": "yarn clean && tsc --outDir dist"
