--- a/plainly-plugin/package.json
+++ b/plainly-plugin/package.json
@@ -42,6 +42,7 @@
     "dotenv-webpack": "^8.1.0",
     "globals": "^15.11.0",
     "html-webpack-plugin": "^5.6.3",
+    "plainly-types": "workspace:*",
     "postcss": "^8.4.49",
     "postcss-loader": "^8.1.1",
     "rimraf": "^6.1.2",
