--- a/plainly-types/tsconfig.json
+++ b/plainly-types/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "strict": true,
     "declaration": true,
-    "emitDeclarationOnly": true
+    "target": "ES2018",
+    "module": "commonjs",
+    "moduleResolution": "node"
   },
   "include": ["src"]
 }
