--- a/plainly-types/tsconfig.json
+++ b/plainly-types/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
-    "declaration": true,
-    "target": "ES2018",
-    "module": "commonjs",
-    "moduleResolution": "node"
+    "declaration": true
   },
   "include": ["src"]
 }
