--- a/plainly-types/tsconfig.json
+++ b/plainly-types/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "strict": true,
-    "declaration": true
+    "declaration": true,
+    "emitDeclarationOnly": true
   },
   "include": ["src"]
 }
