--- a/plainly-plugin/package.json
+++ b/plainly-plugin/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.12.2",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
+    "fontkit": "^2.0.4",
     "form-data": "^4.0.4",
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
