--- a/plainly-plugin/package.json
+++ b/plainly-plugin/package.json
@@ -18,12 +18,12 @@
     "axios": "^1.12.2",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
-    "fontkit": "^2.0.4",
     "form-data": "^4.0.4",
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hooks-global-state": "^2.1.0"
+    "react-hooks-global-state": "^2.1.0",
+    "types-for-adobe": "^7.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
