--- a/plainly-plugin/tsconfig.json
+++ b/plainly-plugin/tsconfig.json
@@ -12,6 +12,6 @@
       "plainly-types": ["../plainly-types"]
     }
   },
-  "include": ["src", "index.d.ts"],
+  "include": ["src", "index.d.ts", "types-for-adobe/AfterEffects/24.0"],
   "exclude": ["node_modules"]
 }
