--- a/plainly-plugin/package.json
+++ b/plainly-plugin/package.json
@@ -22,8 +22,7 @@
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hooks-global-state": "^2.1.0",
-    "types-for-adobe": "^7.2.5"
+    "react-hooks-global-state": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
