PR fixes; add tests for request.ts

--- a/biome.json
+++ b/biome.json
@@ -12,7 +12,8 @@
       "!**/plainly-plugin/src/node/lib",
       "!**/dist",
       "!**/package",
-      "!**/.turbo"
+      "!**/.turbo",
+      "!**/coverage"
     ]
   },
   "formatter": {
