--- a/plainly-plugin/package.json
+++ b/plainly-plugin/package.json
@@ -8,7 +8,9 @@
     "clean": "rimraf dist",
     "build": "yarn clean && cross-env NODE_ENV=production node ./../scripts/updateManifest.cjs && cross-env NODE_ENV=production PLUGIN_ENV=production webpack --mode production",
     "build-test": "yarn clean && cross-env NODE_ENV=production node ./../scripts/updateManifest.cjs && cross-env NODE_ENV=test PLUGIN_ENV=test webpack --mode production",
-    "dev": "yarn clean && cross-env NODE_ENV=development node ./../scripts/updateManifest.cjs --dev && cross-env NODE_ENV=production PLUGIN_ENV=development webpack --mode production --watch"
+    "dev": "yarn clean && cross-env NODE_ENV=development node ./../scripts/updateManifest.cjs --dev && cross-env NODE_ENV=production PLUGIN_ENV=development webpack --mode production --watch",
+    "test": "jest",
+    "test:ci:coverage": "jest --ci --coverage"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
@@ -25,29 +27,35 @@
     "react-hooks-global-state": "^2.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
+    "@babel/core": "^7.28.6",
+    "@babel/preset-env": "^7.28.6",
     "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.28.5",
+    "@jest/globals": "^30.2.0",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@types/archiver": "^6.0.3",
     "@types/dotenv-webpack": "^7.0.8",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.17.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
+    "babel-jest": "^30.2.0",
     "babel-loader": "^9.2.1",
     "cross-env": "^10.0.0",
     "css-loader": "^7.1.2",
     "dotenv-webpack": "^8.1.0",
     "globals": "^15.11.0",
     "html-webpack-plugin": "^5.6.3",
+    "jest": "^30.2.0",
     "plainly-types": "workspace:*",
     "postcss": "^8.4.49",
     "postcss-loader": "^8.1.1",
     "rimraf": "^6.1.2",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.15",
+    "ts-jest": "^29.4.6",
     "ts-loader": "^9.5.1",
     "typescript": "~5.6.2",
     "webpack": "^5.97.1",
