--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,9 +38,36 @@ jobs:
       - name: Run Biome check
         run: biome ci .
 
-  build:
+  test:
     runs-on: ubuntu-latest
     needs: biome
+    name: Run tests
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+
+      - name: Cache turbo build setup
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ github.sha }}
+          restore-keys: ${{ runner.os }}-turbo-
+
+      - name: Install Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: '20.11.1'
+          cache: 'yarn'
+
+      - name: Install dependencies
+        run: yarn install --immutable
+
+      - name: Run tests
+        run: yarn test:ci:coverage
+
+  build:
+    runs-on: ubuntu-latest
+    needs: test
     name: Run build
     steps:
       - name: Checkout
